apps/prod/dl.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt.org
    # nginx.ingress.kubernetes.io/permanent-redirect: https://storage.saltbo.cn$request_uri
    traefik.ingress.kubernetes.io/router.middlewares: default-httpredirect@kubernetescrd,default-dlredirect@kubernetescrd
  name: dl
  namespace: default
spec:
  # ingressClassName: "nginx"
  rules:
    - host: "dl.saltbo.cn"
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: hello
                port:
                  number: 8000
  tls:
    - hosts:
        - dl.saltbo.cn
      secretName: cert-dl.saltbo.cn

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: httpredirect
spec:
  redirectScheme:
    scheme: https
    permanent: true

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dlredirect
spec:
  redirectRegex:
    regex: ^https://dl.saltbo.cn/(.*)
    replacement: https://storage.saltbo.cn/${1}
    permanent: true
